ckad/ingress/ingress-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: nginx-ingress
spec:
  type: NodePort
  selector:
    name: nginx-ingress
  ports:
    - port: 80
      targetPot: 80
      protocol: TCP
      name: http

    - port: 443
      targetPot: 443
      protocol: TCP
      name: https
