ckad/ingress/ingress-resources.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: ingress-myapp
spec:
  backend:
    serviceName: my-service
    servicePort: 80
